Add readme file

--- a/LinkedList/ReverseLinkedList/ReverseLinkedList.vcxproj.filters
+++ b/LinkedList/ReverseLinkedList/ReverseLinkedList.vcxproj.filters
@@ -18,6 +18,9 @@
     <Text Include="Input.txt">
       <Filter>Resource Files</Filter>
     </Text>
+    <Text Include="Readme.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Source.cpp">
