--- a/LinkedList/ReverseLinkedList/ReverseLinkedList.vcxproj
+++ b/LinkedList/ReverseLinkedList/ReverseLinkedList.vcxproj
@@ -82,6 +82,7 @@
   </ItemGroup>
   <ItemGroup>
     <Text Include="Input.txt" />
+    <Text Include="Readme.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
